# neuralnetwork

./: .gitignore  CMakeLists.txt  README.md
src/: activation_functions.f90  cost_functions.f90  layers.f90  neuralnetwork.f90
